--- a/pages-src/index1.html
+++ b/pages-src/index1.html
@@ -7,11 +7,16 @@
   <title>Document</title>
 </head>
 <body class="visible" sortable>
+  <input type="text" value="avcde">
   <table-ui class="show dont-hide big mx-5"></table-ui>
   <table-ui id="foobar" name="the-second"></table-ui>
   <table-ui/>
   <modal-ui class="big little 
   mx-5 show"></modal-ui>
+  <div>
+    some text
+    <span-ui>some other stuff</span-ui>
+  </div>
   <script>
     const foo = "</ script>";
     const i = 5;
