--- a/pages-exp/index1.html
+++ b/pages-exp/index1.html
@@ -7,17 +7,21 @@
 	<title>Document</title>
 </head>
 <body class="visible" sortable>
+	<input type="text" value="avcde">
 	<table-ui class="big dont-hide mx-5 show"/>
 	<table-ui id="foobar" name="the-second"/>
 	<table-ui/>
 	<modal-ui class="big little mx-5 show"/>
+	<div>
+		<span-ui>some other stuff</span-ui>
+	</div>
 	<script>
     const foo = "</ script>";
     const i = 5;
     if (i < 10) {
       console.log(foo);
     }
-  </script>
+  	</script>
 </body>
 </html>
 
